Fixed bug in movie details cast while scrolling on mobile

--- a/src/components/MovieDetails/MovieDetails.module.css
+++ b/src/components/MovieDetails/MovieDetails.module.css
@@ -205,6 +205,7 @@
   );
   right: 0;
   opacity: 0.6;
+  pointer-events: none;
 }
 
 @media (min-width: 480px) {
